Fixes Code from Previous Commit Adds solution code for remainder of Stretch assignment which was left out in previous commit Boxes 1-4 stacked for tablets and phones nav and .logo stacked for tablets and phones

--- a/css/index.css
+++ b/css/index.css
@@ -166,6 +166,20 @@ html {
   margin-bottom: 20px;
   display: flex;
 }
+@media (max-width: 768px) {
+  .container header {
+    flex-wrap: wrap-reverse;
+    height: 200px;
+    justify-content: center;
+  }
+}
+@media (max-width: 400px) {
+  .container header {
+    flex-wrap: wrap-reverse;
+    height: 200px;
+    justify-content: center;
+  }
+}
 .container header nav {
   width: 80%;
   height: 100%;
@@ -181,9 +195,20 @@ html {
     background: green;
   }
 }
+@media (max-width: 768px) {
+  .container header nav {
+    background: orange;
+    width: 100%;
+    height: 100px;
+    margin-right: 0;
+  }
+}
 @media (max-width: 400px) {
   .container header nav {
     background: orange;
+    width: 100%;
+    height: 100px;
+    margin-right: 0;
   }
 }
 .container header .logo {
@@ -201,6 +226,14 @@ html {
 @media (max-width: 768px) {
   .container header .logo {
     background: purple;
+    width: 20%;
+    height: 80px;
+  }
+}
+@media (max-width: 400px) {
+  .container header .logo {
+    width: 40%;
+    height: 80px;
   }
 }
 .container .content {
