--- a/less/selectors.less
+++ b/less/selectors.less
@@ -14,6 +14,19 @@ html {
 		margin-bottom: 20px;
 		display: flex;
 
+		@media @tablet {
+			flex-wrap: wrap-reverse;
+			height: 200px; // Doubled from 100px to account for stacking nav on logo plus 20px for margin-bottom on .logo
+			justify-content: center; // Added to center .logo. -- why isn't this centering nav as well???
+		}
+
+		
+		@media @phone {
+			flex-wrap: wrap-reverse;
+			height: 200px; // Doubled from 100px to account for stacking nav on logo plus 20px for margin-bottom on .logo
+			justify-content: center; // Added to center .logo. -- why isn't this centering nav as well???
+		}
+
 		nav {
 			width: 80%;
 			height: 100%;
@@ -24,8 +37,18 @@ html {
 			@media @laptop {
 				background: green;
 			}
+
+			@media @tablet {
+				background: orange;
+				width: 100%; // 900px only works if 'flex-wrap: wrap' is added to header -- still getting empty space on edge??? - AH - margin-right above!!
+				height: 100px;
+				margin-right: 0;
+			}
 			@media @phone {
 				background: orange;
+				width: 100%; // 900px only works if 'flex-wrap: wrap' is added to header -- still getting empty space on edge??? - AH - margin-right above!!
+				height: 100px;
+				margin-right: 0;
 			}
 		}
 		.logo {
@@ -34,8 +57,15 @@ html {
 			background: @primary-color;
 			.center-content;
 			.border-radius(50%);
+
 			@media @tablet {
 				background: purple;
+				width: 20%; // Increased to approximate oval shape from desktop view
+				height: 80px; // Half of header height @media @phone (200px) minus 20px, to give some margin
+			}
+			@media @phone {
+				width: 40%; // Increased to approximate
+				height: 80px; // Half of header height @media @phone (200px) minus 20px, to give some margin
 			}
 		} // logo
 	} // header
@@ -107,6 +137,7 @@ html {
 		height: 50px;
 		background: @primary-color;
 		.center-content;
+
 		@media @phone {
 			background: orange;
 		}
